<resources>
    <string name="app_name">MySubmission2-2</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Followings</string>

    <!--    Sample Text-->
    <string name="sampleName">Nama Pengguna</string>
    <string name="sampleUsername">Username</string>
    <string name="sampleLocation">Location</string>
    <string name="sampleCompany">Company</string>
    <string name="sampleFollowers">68</string>
    <string name="sampleFollowing">108</string>
    <string name="sampleRepository">Repository</string>

    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bookmark">Bookmark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="photo_user">photo_user</string>
    <string name="repositories_made">Repositories Made</string>
    <string name="following_tag">Following</string>
    <string name="followers_tag">Followers</string>
    <string name="username_tag">Username: %s</string>
    <string name="location_tag">Location: %s</string>
    <string name="company_tag">Company: %s</string>

</resources>